--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -15,6 +15,7 @@ gap:30px;
   list-style-type: none;
   text-decoration:none;
   color:white;
+  padding: 5px;
 }
 .Nav-Home{
   color:white;
@@ -53,3 +54,10 @@ gap:30px;
 text-decoration:none;
 color:white;
 }
+
+.Nav-list-item:hover{
+  border:0.5px solid blue;
+  border-radius:10px;
+  background-color:#2188ff;
+}
+
