--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,16 +1,15 @@
-
 .Login-container{
   display: flex;
   justify-content:center;
   margin-top:10px; 
-  color:white;
+  color:black;
 }
 .Login-main{
   display: flex;
   align-items:center;
   flex-direction:column;
   width: 300px;
-  border: 1px solid white;
+  border: 1px solid black;
 }
 .Login-form{
   margin-top: 10px;
@@ -20,7 +19,7 @@
   padding:10px;
 }
 .dash{
-  border:0.5px solid white;
+  border:0.5px solid black;
   width: 100%;
   margin-bottom:10px;
 }
@@ -31,4 +30,8 @@ form input{
   margin-top:5px;
   margin-bottom:5px;
   padding:5px;
+}
+.login-link{
+  text-decoration:none;
+  padding: 6px;
 }
